tests/rosetta/out/Pascal/apply-a-callback-to-an-array-2.pas
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:36:08Z
program ApplyACallbackToAnArray2;
{$mode objfpc}
{$modeswitch nestedprocvars}
uses SysUtils, fgl, fphttpclient, Classes, Variants, fpjson, jsonparser, fpjsonrtti;

type
  generic TArray<T> = array of T;
type
  TFunc0 = function(p0: integer): integer is nested;


function each(xs: specialize TArray<integer>; f: TFunc0): integer;
begin
  for x in xs do
  begin
    f(x);
  end;
end;

function Map(xs: specialize TArray<integer>; f: TFunc0): specialize TArray<integer>;
var
  r: specialize TArray<integer>;
begin
  r := specialize TArray<integer>([]);
  for x in xs do
  begin
    r := specialize _appendList<Variant>(r, f(x));
  end;
  result := r;
  exit;
end;

function main(): integer;
var
  s: specialize TArray<integer>;
function _lambda0(i: integer): any;
begin
  result := writeln(IntToStr(i * i));
  exit;
end;

function _lambda0(i: integer): integer;
begin
  result := i * i;
  exit;
end;

begin
  s := specialize TArray<integer>([1, 2, 3, 4, 5]);
  each(s, _lambda0);
  writeln(IntToStr(Map(s, _lambda0)));
end;

generic function _appendList<T>(arr: specialize TArray<T>; val: T): specialize TArray<T>;
var i,n: Integer;
begin
  n := Length(arr);
  SetLength(Result, n + 1);
  for i := 0 to n - 1 do
    Result[i] := arr[i];
  Result[n] := val;
end;

begin
  main();
end.
